testsuite/tests/polykinds/T8616.stderr

T8616.hs:8:16: error:
    • Couldn't match kind ‘k1’ with ‘*’
      When matching types
        Any :: k1
        Proxy kproxy :: *
      ‘k1’ is a rigid type variable bound by
        the type signature for:
          withSomeSing :: forall k1 (kproxy :: k1). Proxy kproxy
        at T8616.hs:7:1-52
    • In the expression: undefined :: (Any :: k)
      In an equation for ‘withSomeSing’:
          withSomeSing = undefined :: (Any :: k)
    • Relevant bindings include
        withSomeSing :: Proxy kproxy (bound at T8616.hs:8:1)
